--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -39,7 +39,7 @@
     margin-top: 20px; /* Adjust spacing */
     background: lightgreen;
     color: white;
-    font-size: 18px; /* Reduce font size */
+    font-size: 18px; 
     font-weight: 500;
     cursor: pointer;
   }
